# OpenAula

./: .gitignore  Cargo.toml  README.md
crates/openaula-cli/: Cargo.toml
crates/openaula-cli/src/: args.rs  commands.rs  lib.rs  main.rs  parse.rs
crates/openaula-core/: Cargo.toml
crates/openaula-core/src/: dump.rs  lib.rs  model.rs  protocol.rs  transport.rs
crates/openaula-desktop/: Cargo.toml
crates/openaula-desktop/src/: app.rs  catalog.rs  main.rs  theme.rs
docs/: cli.md  feature-map.md  mini60-gui.json  mini60-layout.md  native-gui-spec.md  protocol.md
src/: main.rs
