[workspace]
members = [
    "crates/openaula-core",
    "crates/openaula-cli",
    "crates/openaula-desktop",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxnmai/OpenAula"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

