[workspace]
members = [
    "crates/openaula-core",
    "crates/openaula-cli",
    "crates/openaula-desktop",
]
resolver = "3"

[package]
name = "openaula"
description = "Local configurator for supported AULA keyboards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "aula"
path = "src/main.rs"

[dependencies]
openaula-cli = { path = "crates/openaula-cli" }

[lints]
workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cxnmai/OpenAula"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"
