[package]
name = "openaula-cli"
description = "Command-line frontend for OpenAula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aula"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.3", features = ["derive"] }
openaula-core = { path = "../openaula-core" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"

[lints]
workspace = true
