[package]
name = "openaula-core"
description = "Device protocol and configuration library for OpenAula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2.6.6", default-features = false, features = ["linux-native-basic-udev"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = "2.6.6"

[dev-dependencies]
serde_json = "1.0.149"

[lints]
workspace = true
