[package]
name = "openaula-desktop"
description = "Future graphical frontend for OpenAula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
openaula-core = { path = "../openaula-core" }

[lints]
workspace = true

