[package]
name = "openaula-desktop"
description = "Native GPUI frontend for OpenAula"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
openaula-core = { path = "../openaula-core" }

[lints]
workspace = true
